[gd_scene load_steps=5 format=3 uid="uid://dws5yla2y7vyd"]

[ext_resource type="Script" path="res://scripts/interface.gd" id="1_jw04m"]
[ext_resource type="Texture2D" uid="uid://cyr8rl1emghgj" path="res://assets/CuteCards - asset pack/CuteCards.png" id="2_n7dwr"]
[ext_resource type="Theme" uid="uid://cmqheujsf21rb" path="res://theme.tres" id="3_7ns5i"]

[sub_resource type="Theme" id="Theme_aek7s"]
Button/font_sizes/font_size = 30

[node name="Interface" type="CanvasLayer"]
script = ExtResource("1_jw04m")

[node name="Back" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -113.0
offset_bottom = 113.0
grow_horizontal = 0
theme = SubResource("Theme_aek7s")
text = ">>>"

[node name="Pause" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_right = -137.0
offset_bottom = 113.0
grow_horizontal = 0
theme = SubResource("Theme_aek7s")
text = "||"

[node name="Foward" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -390.0
offset_right = -277.0
offset_bottom = 113.0
grow_horizontal = 0
theme = SubResource("Theme_aek7s")
text = "<<<"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_7ns5i")
theme_override_constants/margin_bottom = 20

[node name="Hand" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="Demon" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -156.0
offset_right = 113.0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 20

[node name="Sprite2D" type="Sprite2D" parent="Demon"]
position = Vector2(66, 68)
texture = ExtResource("2_n7dwr")
hframes = 15
vframes = 4
frame = 44

[node name="CardBuyPrice" type="Label" parent="Demon"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_7ns5i")
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 25
text = "$ 25"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Demon"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Human" type="MarginContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -113.0
offset_top = -156.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Sprite2D" type="Sprite2D" parent="Human"]
position = Vector2(48, 68)
texture = ExtResource("2_n7dwr")
hframes = 15
vframes = 4
frame = 44

[node name="CardBuyPrice" type="Label" parent="Human"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_7ns5i")
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 25
text = "$ 25"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Human"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -168.0
offset_right = 168.0
offset_bottom = 161.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="PlayerBalance" type="Label" parent="MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_7ns5i")
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 40
text = "$ 100"

[connection signal="pressed" from="Back" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Foward" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Demon/Button" to="." method="_on_buy_demon_card_button_pressed"]
[connection signal="pressed" from="Human/Button" to="." method="_on_buy_human_card_button_pressed"]
